terraform/level 1/3. vpc.tf
resource "aws_vpc" "custom_vpc" {
    cidr_block = "10.0.0.0/16"
    tags = {
        Name = "custom-vpc"
    }
}
