terraform/level 1/31. Deleting VPC.tf
// Apply terraform destroy here
resource "aws_vpc" "this" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name        = "devops-vpc"
  }
}
